MonetDB4/tests/BugsViaSourgeforce/Tests/ID.914935.stable.out.64bit
stdout of test 'ID.914935` in directory 'tests/BugsViaSourgeforce` itself:


# 22:18:29 >  
# 22:18:29 >  Mtimeout -timeout 60 Mserver "--config=/var/tmp/_4.3.16_PREFIX_MONET_GNU_32_d__/etc/monet.conf" --debug=10 --set "monet_mod_path=/var/tmp/_4.3.16_PREFIX_MONET_GNU_32_d__/lib/MonetDB" --set "gdk_dbfarm=/var/tmp/_4.3.16_PREFIX_MONET_GNU_32_d__/var/MonetDB/dbfarm" --set "sql_logdir=/var/tmp/_4.3.16_PREFIX_MONET_GNU_32_d__/var/MonetDB/log" --set mapi_port=46316 --set sql_port=58861 --set monet_prompt= --trace --dbname=mTests_tests_BugsViaSourgeforce  < ID.914935.milS
# 22:18:29 >  

# Monet Database Server V4.3.16_rc05
# Copyright (c) 1993-2004, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit; dynamically linked.

VAR b := new(int,int);
VAR n := 10;
VAR i := 0;

WHILE (i < n) {
	i :+= 1;
	b.insert(i,i);
}
b.access(BAT_READ);

print(rangesplit(b,0));
!ERROR: BAThashsplit: number of ranges must not be less than 1!
!ERROR: CMDrangesplit: operation failed.
!ERROR: interpret_params: print(param 1): evaluation error.
print(rangesplit(b,-1));
!WARNING: BATrangesplit: reduced number of ranges (18446744073709551615) to number of tuples (10).
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 1,	  <tmp_72>	  ]
[ 2,	  <tmp_73>	  ]
[ 3,	  <tmp_74>	  ]
[ 4,	  <tmp_75>	  ]
[ 5,	  <tmp_76>	  ]
[ 6,	  <tmp_77>	  ]
[ 7,	  <tmp_100>	  ]
[ 8,	  <tmp_101>	  ]
[ 9,	  <tmp_102>	  ]
[ nil,	  <tmp_103>	  ]
print(rangesplit(b,1));
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ nil,	  <tmp_65>	  ]
print(rangesplit(b,2));
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 5,	  <tmp_104>	  ]
[ nil,	  <tmp_105>	  ]
print(rangesplit(b,5));
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 2,	  <tmp_106>	  ]
[ 4,	  <tmp_107>	  ]
[ 6,	  <tmp_110>	  ]
[ 8,	  <tmp_111>	  ]
[ nil,	  <tmp_112>	  ]
print(rangesplit(b,n));
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 1,	  <tmp_113>	  ]
[ 2,	  <tmp_114>	  ]
[ 3,	  <tmp_115>	  ]
[ 4,	  <tmp_116>	  ]
[ 5,	  <tmp_117>	  ]
[ 6,	  <tmp_120>	  ]
[ 7,	  <tmp_121>	  ]
[ 8,	  <tmp_122>	  ]
[ 9,	  <tmp_123>	  ]
[ nil,	  <tmp_124>	  ]
print(rangesplit(b,n + 1));
!WARNING: BATrangesplit: reduced number of ranges (11) to number of tuples (10).
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 1,	  <tmp_125>	  ]
[ 2,	  <tmp_126>	  ]
[ 3,	  <tmp_127>	  ]
[ 4,	  <tmp_130>	  ]
[ 5,	  <tmp_131>	  ]
[ 6,	  <tmp_132>	  ]
[ 7,	  <tmp_133>	  ]
[ 8,	  <tmp_134>	  ]
[ 9,	  <tmp_135>	  ]
[ nil,	  <tmp_136>	  ]

print(hashsplit(b,0));
!ERROR: BAThashsplit: number of ranges must not be less than 1!
!ERROR: CMDhashsplit: operation failed.
!ERROR: interpret_params: print(param 1): evaluation error.
print(hashsplit(b,-1));
!WARNING: BAThashsplit: reduced number of ranges (18446744073709551615) to number of tuples (10).
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 0,	  <tmp_70>	  ]
[ 1,	  <tmp_71>	  ]
[ 2,	  <tmp_137>	  ]
[ 3,	  <tmp_140>	  ]
[ 4,	  <tmp_141>	  ]
[ 5,	  <tmp_142>	  ]
[ 6,	  <tmp_143>	  ]
[ 7,	  <tmp_144>	  ]
[ 8,	  <tmp_145>	  ]
[ 9,	  <tmp_146>	  ]
print(hashsplit(b,2));
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 0,	  <tmp_146>	  ]
[ 1,	  <tmp_145>	  ]
print(hashsplit(b,5));
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 0,	  <tmp_145>	  ]
[ 1,	  <tmp_146>	  ]
[ 2,	  <tmp_144>	  ]
[ 3,	  <tmp_143>	  ]
[ 4,	  <tmp_142>	  ]
print(hashsplit(b,1));
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 0,	  <tmp_65>	  ]
print(hashsplit(b,n));
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 0,	  <tmp_142>	  ]
[ 1,	  <tmp_143>	  ]
[ 2,	  <tmp_144>	  ]
[ 3,	  <tmp_146>	  ]
[ 4,	  <tmp_145>	  ]
[ 5,	  <tmp_141>	  ]
[ 6,	  <tmp_140>	  ]
[ 7,	  <tmp_137>	  ]
[ 8,	  <tmp_71>	  ]
[ 9,	  <tmp_70>	  ]
print(hashsplit(b,n + 1));
!WARNING: BAThashsplit: reduced number of ranges (11) to number of tuples (10).
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 0,	  <tmp_70>	  ]
[ 1,	  <tmp_71>	  ]
[ 2,	  <tmp_137>	  ]
[ 3,	  <tmp_140>	  ]
[ 4,	  <tmp_141>	  ]
[ 5,	  <tmp_145>	  ]
[ 6,	  <tmp_146>	  ]
[ 7,	  <tmp_144>	  ]
[ 8,	  <tmp_143>	  ]
[ 9,	  <tmp_142>	  ]
quit();

# 22:21:26 >  
# 22:21:26 >  Done.
# 22:21:26 >  

